
* <java> ignored the append attribute, Bugzilla Report 26137.

* The gcj compiler adapter for <javac> failed if the destination
  directory didn't exist.  Bugzilla Report 25856.

* Ant now fails with a more useful message if a new process will be
  forked in a directory and that directory doesn't exist.

* junitreport was failing for long string litterals
  Bugzilla Report 19301.

Other changes:
--------------

* Shipped XML parser is now Xerces-J 2.6.1

* upgrade to xml-apis.jar from Xerces-J 2.6.1.

* License is now Apache Software License 2.0

* <fixcrlf> has a new attribute - fixlast. Bugzilla Report 23262.

* <p4submit> has 2 new attributes, needsresolveproperty and changeproperty.
  Bugzilla Report 25711.

* Extending ClearCase Tasks :
 - Added an extra option to 'failonerr' to each ClearCase task/command.
 - Extended the functionality of cccheckout. It can check (notco) to see if
  the desired element is already checked out to the current view. Thus it
   won't attempt to check it out again.
 - Added three new ClearCase commands: ccmkattr, ccmkdir, ccmkelem
  Bugzilla Report 26253.

* add description attributes to macrodef attributes and elements.
  Bugzilla Report 24711.

* added nested text support to <macrodef>
  
* added initial support for Java 1.5.  Java 1.5 is now correctly
  detected by Ant and treated just like Java 1.4.  You can now specify
  source="1.5" in the <javac> task.

* created new task <cvsversion>

* added support for branch logging via the tag attribute in <cvschangelog>
  Bugzilla Report 13510.

Changes from Ant 1.6.B3 to Ant 1.6.0
====================================

Changes that could break older environments:
--------------------------------------------

* Attempts to read input in <java> and <exec> tasks will now receive an EOF
  rather than blocking. If you run such a process and rely on it blocking, as
  it would do in Ant 1.5, you may have problem.

* <checksum> message "calculating checksum" downgraded to MSG_VERBOSE